# Ysolve-bot

./: .gitignore  README.md  fil1.py
Proyecto/install/: local_setup.sh  setup.ps1  setup.sh
Proyecto/log/: latest_build
Proyecto/metapackage/: package.xml
Proyecto/my_nav2_system/config/: my_map.yaml
Proyecto/my_nav2_system/install/: local_setup.sh  setup.bash  setup.sh
Proyecto/my_nav2_system/log/: latest_build
Proyecto/my_slam/map/: .yaml
Proyecto/my_world/map/: my_map.pgm
Proyecto/src/install/: local_setup.sh  setup.sh  setup.zsh
Proyecto/src/log/: latest_build
Proyecto/src/metapackage/: CMakelists.txt  package.xml
Proyecto/src/ysolve_nav2_system/: package.xml  setup.cfg  setup.py
Proyecto/src/ysolve_nav2_system/config/: turtlebot3_world.yaml  ysolve_map.yaml
Proyecto/src/ysolve_slam/: package.xml  setup.cfg  setup.py
Proyecto/src/ysolve_slam/launch/: ysolve_slam.launch.py
angular/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
angular/src/: index.html  styles.scss
angular/src/app/: app.component.ts  app.module.ts
api/: db.json  index.js  package-lock.json  package.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/ysolve_bot/ysolve_bot/: CMakeLists.txt  package.xml
src/ysolve_bot/ysolve_bot_my_slam/: package.xml  setup.py
src/ysolve_bot/ysolve_bot_nav_route/: package.xml
src/ysolve_bot/ysolve_bot_position_publisher/: setup.py
src/ysolve_bot/ysolve_bot_world/: CMakeLists.txt  package.xml
src/ysolve_bot_web/: index.html
src/ysolve_bot_web/css/: custom.css
va/: Va.ipynb  script.py
web/: dash.html  index.html
web/css/: custom.css  dash.css  styles.css
ysolve/src/my_nav2_system/: setup.py
ysolve/src/my_world/: package.xml
ysolve_bot/install/: local_setup.sh  setup.bash  setup.zsh
ysolve_bot/src/metapackage/: CMakelists.txt
ysolve_bot/src/ysolve_bot_my_slam/: package.xml  setup.py
ysolve_bot/src/ysolve_bot_position_publisher/: package.xml
ysolve_bot/src/ysolve_bot_position_subscriber/: package.xml
ysolve_bot_ros2/src/ysolve_bot/ysolve_bot/: CMakeLists.txt  package.xml
ysolve_bot_web/angular/: karma.conf.js
(+382 files in other folders)
