<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href=http://download.ros.org/schema/package_format3.xsd 
schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ysolve-bot</name>
    <version>2.1.4</version>
    <description>Proyecto de Ysolve-bot un robot con capacidad de navegación autónoma y con la característica de que puede detectar incendios mediante una camara incorporada</description>
    <maintainer email="danielpoquet99@gmail.com">Daniel Poquet</maintainer>
    <license>Apache 2.0</license>
    <url type="website">https://ysolve.es/</url>
    <url type="repository">https://github.com/Losina24/Ysolve-bot</url>
    <url type="bugtracker">https://github.com/Losina24/Ysolve-bot</url>
    <author email="danielpoquet99@gmail.com">danielpoquet99@gmail.com</author>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>my_slam</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
